changes to html and index.js

--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<!-- handle js -->
+<script src="index.js"></script>
 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body ng-app="app">
+    <div ng-controller="MainCtrl">
+        <h1>Test Message</h1>
+    </div>
+
+</body>
+</html>
