--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-=======
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -45,30 +43,18 @@
         <p id=""></p>
     </div>
 
+    <footer id="footer">
+        <ul class="meta">
+                <span>
+                    Made by
+                    <a href="https://github.com/CCONLEY-FI" target="_blank">Chris</a>
+                     &
+                    <a href="https://github.com/ngallegos8" target="_blank">Nick</a>
+                </span>
+        </ul>
+    </footer>
 
 
 
-
-=======
-<!-- handle js -->
-<script src="index.js"></script>
-
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-
-    <!-- Include the CSS file here -->
-    <link rel="stylesheet" href="style.css">
-    <script defer src="key.js" type="module"></script>
-    <script defer src="index.js" type="module"></script>
-</head>
-<body>
-
-    <div id="main">
-        <h1 id="message">Test Message</h1>
-    </div>
-    <!-- Include the script tag here -->
-    <script src="index.js"></script>
 </body>
 </html>
