--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,22 @@
     <div>
         <p id="result">Winner message displayed here</p>
     </div>
-        <footer id="footer">
+
+    <div>
+        <form id="add-hero-form">
+            <input type="text" id="new-hero-name" placeholder="Hero Name" required />
+            <input type="url" id="new-hero-image" placeholder="Image URL" required />
+            <input type="text" id="new-hero-intelligence" placeholder="Intelligence" required />
+            <input type="text" id="new-hero-strength" placeholder="Strength" required />
+            <input type="text" id="new-hero-speed" placeholder="Speed" required />
+            <input type="text" id="new-hero-durability" placeholder="Durability" required />
+            <input type="text" id="new-hero-power" placeholder="Power" required />
+            <input type="text" id="new-hero-combat" placeholder="Combat" required />
+            <button type="submit">Add Hero</button>
+        </form>
+    </div>
+
+    <footer id="footer">
         <ul class="meta">
             <span>
                 Made by
