--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="top">
+        
         <h1>Superhero Showdown</h1>
     </div>
     <hr/>
@@ -21,12 +22,12 @@
         <div id="hero-a-info">
             <img id="hero-a-image" src="images/left_fight.jpeg" />
             <h2 id="hero-a-name">Name1</h2>
-            <h2 id="hero-a-power">Powerstats</h2>
+            <h3 id="hero-a-power">Powerstats</h3>
         </div>
         <div id="hero-b-info">
             <img id="hero-b-image" src="images/right_fight.jpeg" />
             <h2 id="hero-b-name">Name2</h2>
-            <h2 id="hero-b-power">Powerstats</h2>
+            <h3 id="hero-b-power">Powerstats</h3>
         </div>
     </div>
 
@@ -35,7 +36,7 @@
     </div>
 
     <div>
-        <p id="result">Winner message displayed here</p>
+        <p id="result"></p>
     </div>
         <footer id="footer">
         <ul class="meta">
