basic css finished

--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,13 @@
     <div class="selected-heroes-container">
         <div id="hero-a-info">
             <img id="hero-a-image" src="images/left_fight.jpeg" />
-            <h2 id="hero-a-name">Name1</h2>
-            <h2 id="hero-a-power">Powerstats</h2>
+            <h2 id="hero-a-name"></h2>
+            <h2 id="hero-a-power"></h2>
         </div>
         <div id="hero-b-info">
             <img id="hero-b-image" src="images/right_fight.jpeg" />
-            <h2 id="hero-b-name">Name2</h2>
-            <h2 id="hero-b-power">Powerstats</h2>
+            <h2 id="hero-b-name"></h2>
+            <h2 id="hero-b-power"></h2>
         </div>
     </div>
 
@@ -35,10 +35,10 @@
     </div>
 
     <div>
-        <p id="result">Winner message displayed here</p>
+        <p id="result"></p>
     </div>
 
-    <div>
+    <div class="new-hero-form">
         <form id="add-hero-form">
             <input type="text" id="new-hero-name" placeholder="Hero Name" required />
             <input type="url" id="new-hero-image" placeholder="Image URL" required />
@@ -55,10 +55,10 @@
     <footer id="footer">
         <ul class="meta">
             <span>
-                Made by
-                <a href="https://github.com/CCONLEY-FI" target="_blank">Chris</a>
-                 &
+                Brought to you by I.N.C. Inc, 2024 Inventions
                 <a href="https://github.com/ngallegos8" target="_blank">Nick</a>
+                 &
+                 <a href="https://github.com/CCONLEY-FI" target="_blank">Chris.</a>
             </span>
         </ul>
     </footer>
